testdata/golden/hir_borrow/invalid/spawn_escape.hir
warning SEM3004 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:5 declaration of 't' shadows previous binding
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:26 cannot send 'r' to a task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=1224) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L2449(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=1225) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let t: type#1331 = task use_ref(r): type#1331: type#1331
  await(t): type#1332
  return
}

borrow edges:
  L2451(r) (&) borrows L2450(x) at 0:87-89 scope=S5
events:
  borrow_start L2451(r) -> L2450(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L2451(r) -> L2450(x) at 0:116-117 scope=S5 note="B1"
  move L2452(t) at 0:124-125 scope=S5
  borrow_end L2451(r) -> L2450(x) scope=S5 note="scope_end B1"
move plan:
  L2450(x): MoveCopy (copy type)
  L2451(r): MoveForbidden (task escape)
  L2452(t): MoveNeedsDrop (non-copy (drop))

